--- a/style/style.css
+++ b/style/style.css
@@ -424,13 +424,36 @@ border-bottom: 3px solid #0b5fb3;
   font-weight: Bold;
 }
 
+.topics_list_boxtop {
+  padding: 6px 12px;
+  border-radius: 5px;
+  background-color: #ffffff;
+  box-shadow: 0 1px 0 0 #ccc; 
+  margin-bottom: 0.5px;
+  border-bottom: 0.5px solid #ccc;
+}
+
+.topics_list_title {
+  font-family: 'Arial';
+  font-weight: Bold;
+  font-size: 14px;
+  color: #000000;
+}
+
+.topics_list_qos {
+  font-family: 'Arial';
+  font-weight: Bold;
+  font-size: 14px;
+  color: #000000;
+}
+
 .topics_listitem {
   padding: 6px 12px;
   border-radius: 5px;
   background-color: #ffffff;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08);
-  margin-bottom: 1px;
-  border-bottom: 2px;
+  box-shadow: 0 1px 0 0 #ccc; 
+  margin-bottom: 0.5px;
+  border-bottom: 0.5px solid #ccc;
   transition: background-color 200ms ease;
 }
 
@@ -463,4 +486,13 @@ border-bottom: 3px solid #0b5fb3;
   background-color: #eef1f4;
   padding: 4px 10px;
   border-radius: 8px;
+}
+
+.topics_list_box {
+  padding: 6px 12px;
+  border-radius: 5px;
+  background-color: #ffffff;
+  box-shadow: 0 1px 0 0 #ccc; 
+  margin-bottom: 0.5px;
+  border-bottom: 0.5px solid #ccc;
 }
